--- a/sampleApp_20180329/WebContent/css/base.css
+++ b/sampleApp_20180329/WebContent/css/base.css
@@ -20,7 +20,7 @@ a:active { text-decoration: underline; color: #333399; }
 
 /* メインメニュー */
 #ebase6_mainmenu {
-	background-color :#ff0000;
+	background-color :#99eeff;
 	font-size : 32px;
 }
 
@@ -65,9 +65,9 @@ table td {
 /* メニュー背景 */
 #ebase6_menulist {
 	background-color : #a5a5a5;
-	//position : fixed;
-	//bottom : 120px;
-	//left : 20px;
+	position : fixed;
+	bottom : 120px;
+	left : 20px;
 	width : 300px;
 	height : 300px;
 	display : none;
@@ -82,9 +82,9 @@ table td {
 	background-color : #bfbfff;
 	color : #000000;
 	text-align : center;
-	//position : fixed;
-	//bottom : 420px;
-	//left : 20px;
+	position : fixed;
+	bottom : 420px;
+	left : 20px;
 	width : 300px;
 	height : 30px;
 	font-size :24px;
@@ -154,11 +154,10 @@ table td {
 }
 #ebase6_popup_title {
 	display : inline;
-	vartical-text :
 }
-#ebase6_popup_body {
+/*#ebase6_popup_body {
 
-}
+}*/
 #ebase6_popup_foot {
 	position: absolute;
 	bottom : 0;
